--- a/angular/src/app/bsignup/bsignup.component.html
+++ b/angular/src/app/bsignup/bsignup.component.html
@@ -3,27 +3,23 @@
         
    <div class="row d-flex justify-content-center align-items-center h-100">
     <div class="col col-xl-6">
-        <form [formGroup]="SignUp">
+        <form >
             <div class="text-center mb-0 h1" style="color: beige; font-weight:700; font-size: 4em;">
               <p>Sign up</p>
-              <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-facebook-f"></i>
-              </button>
-        
-              <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-google"></i>
-              </button>
-        
-              <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-twitter"></i>
-              </button>
-        
-              <button type="button" class="btn btn-link btn-floating mx-1">
-                <i class="fab fa-github"></i>
-              </button>
+              <div class="dropdown">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                  Dropdown button
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" >Link 1</a>
+                  <a class="dropdown-item" >Link 2</a>
+                  <a class="dropdown-item" >Link 3</a>
+                </div>
+              </div>
+              
             </div>
         
-            <p class="text-center">or:</p>
+           
         
             <!-- Name input -->
             <div class="form-outline mb-4 form-group form-row">
@@ -49,17 +45,9 @@
             <div class="form-outline mb-4 form-group form-row">
               <input type="password" id="registerRepeatPassword" class="form-control" formControlName="confirm" placeholder="Repeat password"/>
             </div>
-            <div class="form-outline mb-4 form-group form-row">
-              <input type="text" id="registerRepeatPassword" class="form-control" formControlName="phone" placeholder="Phone"/>
-            </div>
-            <div class="form-outline mb-4 form-group form-row">
-              <input type="text" id="registerRepeatPassword" class="form-control" formControlName="confirm" placeholder="Location"/>
-            </div>
-        
-
         
             <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-3" (click)="Signup()">Sign in</button>
+            <button type="submit" class="btn btn-primary btn-block mb-3" >Sign in</button>
           </form>
 
       </div>
