--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -4,9 +4,9 @@
       <div class="col-md-12 navbar">
         <a href="index.html" class="logo navbar-brand text-white offset-md-2">WD</a>
         <ul class="nav">
-          <li class="nav-item active"><a href="#" class="nav-link">Login</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Sign Up</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Contact Us</a></li>
+          <li class="nav-item active"><a  routerLink="login" class="nav-link">Login</a></li>
+          <li class="nav-item"><a  routerLink="signup" class="nav-link">Sign Up</a></li>
+          <li class="nav-item"><a  routerLink="#" class="nav-link">Contact Us</a></li>
         </ul>
       </div>
 
