--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -2,10 +2,10 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12 navbar">
-        <a href="index.html" class="logo navbar-brand text-white offset-md-2">WD</a>
+        <a routerLink="/" class="logo navbar-brand text-white offset-md-2">WD</a>
         <ul class="nav">
-          <li class="nav-item active"><a  routerLink="login" class="nav-link">Login</a></li>
-          <li class="nav-item"><a  routerLink="signup" class="nav-link">Sign Up</a></li>
+          <li class="nav-item active"><a  routerLink="/login" class="nav-link">Login</a></li>
+          <li class="nav-item"><a  routerLink="/signup" class="nav-link">Sign Up</a></li>
           <li class="nav-item"><a  routerLink="#" class="nav-link">Contact Us</a></li>
         </ul>
       </div>
