--- a/angular/src/app/home/home.component.css
+++ b/angular/src/app/home/home.component.css
@@ -8,7 +8,7 @@
 	font-family: 'Poppins',sans-serif;
 }
 .navbar{
-	position: fixed;
+	position: absolute;
 	top: 0;
 	z-index: 99999;
 	padding:25px 0;
@@ -69,7 +69,7 @@
 	background: url('https://images.unsplash.com/photo-1587271407850-8d438ca9fdf2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
 	background-size: 100% 100%;
 	background-position: center;
-	background-attachment: fixed;
+	background-attachment: fixed;	
 }
 
 #bannerimg .backfade .items .info{
@@ -140,16 +140,16 @@
 	border: none;
 	transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
    overflow:hidden;
-   border-radius:20px;
-   min-height:450px;
+   border-radius:20px;	
+   min-height:250px;
 	 box-shadow: 0 0 12px 0 rgba(0,0,0,0.2);
   
    @media (max-width: 768px) {
-	min-height:350px;
+	min-height:250px;
   }
   
   @media (max-width: 420px) {
-	min-height:300px;
+	min-height:200px;
   }
 }
    
