--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -42,40 +42,6 @@
 <section class="wrapper">
   <div class="container mx-auto mt-4">
 
-    <div class="row" style="padding : 20px">
-      <div class="col-md-4" *ngFor="let d of data;">
-        <div class="card text-white card-has-bg click-col mr-3" style="width: 18rem;"
-          style="background-image:url({{d.img}});">
-          <img class="card-img d-none" src={{d.img}}
-            alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
-          <div class="card-img-overlay d-flex flex-column">
-            <div class="card-body">
-              <small class="card-meta mb-2">Thought Leadership</small>
-              <h4 class="card-title mt-0 "><a class="text-white">{{d.Description}}</a></h4>
-              <small><i class="far fa-clock"></i> October 15, 2020</small>
-            </div>
-            <div class="card-footer">
-              <div class="media">
-                <img class="mr-3 rounded-circle"
-                  src="https://cdn0.iconfinder.com/data/icons/user-pictures/100/male-512.png"
-                  alt="Generic placeholder image" style="max-width:50px">
-                <div class="media-body">
-                  <h6 class="my-0 text-white d-block">{{d.HallName}}</h6>
-                  <small>{{d.Location}}</small>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<h1 style="margin:1em 3em ;">Photographers</h1>
-<section class="wrapper">
-  <div class="container mx-auto mt-4">
-
     <div class="row">
       <div class="col-md-4">
         <div class="card text-white card-has-bg click-col mr-3" style="width: 18rem;"
@@ -84,10 +50,8 @@
             alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
           <div class="card-img-overlay d-flex flex-column">
             <div class="card-body">
-              <small class="card-meta mb-2">Thought Leadership</small>
-              <h4 class="card-title mt-0 "><a class="text-white" herf="#">Goverment Lorem Ipsum Sit Amet Consectetur
-                  dipisi?</a></h4>
-              <small><i class="far fa-clock"></i> October 15, 2020</small>
+              <h4 class="card-title mt-3 "><a class="text-white" >Fit for Aspicious Occations </a></h4>
+             
             </div>
             <div class="card-footer">
               <div class="media">
@@ -110,10 +74,8 @@
             alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
           <div class="card-img-overlay d-flex flex-column">
             <div class="card-body">
-              <small class="card-meta mb-2">Thought Leadership</small>
-              <h4 class="card-title mt-0 "><a class="text-white" herf="#">Goverment Lorem Ipsum Sit Amet Consectetur
-                  dipisi?</a></h4>
-              <small><i class="far fa-clock"></i> October 15, 2020</small>
+              <h4 class="card-title mt-3 "><a class="text-white" >Filled with blessings</a></h4>
+
             </div>
             <div class="card-footer">
               <div class="media">
@@ -136,10 +98,7 @@
             alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
           <div class="card-img-overlay d-flex flex-column">
             <div class="card-body">
-              <small class="card-meta mb-2">Thought Leadership</small>
-              <h4 class="card-title mt-0 "><a class="text-white" herf="#">Goverment Lorem Ipsum Sit Amet Consectetur
-                  dipisi?</a></h4>
-              <small><i class="far fa-clock"></i> October 15, 2020</small>
+              <h4 class="card-title mt-3 "><a class="text-white"> Cherised with the blessing</a></h4>
             </div>
             <div class="card-footer">
               <div class="media">
@@ -149,6 +108,87 @@
                 <div class="media-body">
                   <h6 class="my-0 text-white d-block">Vijay Mahal</h6>
                   <small>Ammapet</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
+<h1 style="margin:1em 3em ;">Photographers</h1>
+<section class="wrapper">
+  <div class="container mx-auto mt-4">
+
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card text-white card-has-bg click-col mr-3" style="width: 18rem;"
+          style="background-image:url('https://source.unsplash.com/600x900/?tech,street');">
+          <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tech,street"
+            alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+          <div class="card-img-overlay d-flex flex-column">
+            <div class="card-body">
+              <h4 class="card-title mt-3 "><a class="text-white" herf="#">Specialist in Candid</a></h4>
+              
+            </div>
+            <div class="card-footer">
+              <div class="media">
+                <img class="mr-3 rounded-circle"
+                  src="https://cdn0.iconfinder.com/data/icons/user-pictures/100/male-512.png"
+                  alt="Generic placeholder image" style="max-width:50px">
+                <div class="media-body">
+                  <h6 class="my-0 text-white d-block">Rama Subbu</h6>
+                  <small>15 years</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-white card-has-bg click-col mr-3" style="width: 18rem;"
+          style="background-image:url('https://source.unsplash.com/600x900/?tree,nature');">
+          <img class="card-img d-none" src="https://source.unsplash.com/600x900/?tree,nature"
+            alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+          <div class="card-img-overlay d-flex flex-column">
+            <div class="card-body">
+              <h4 class="card-title mt-3 ml-1"><a class="text-white" herf="#">Know for my Editing </a></h4>
+            </div>
+            <div class="card-footer">
+              <div class="media">
+                <img class="mr-3 rounded-circle"
+                  src="https://cdn0.iconfinder.com/data/icons/user-pictures/100/male-512.png"
+                  alt="Generic placeholder image" style="max-width:50px">
+                <div class="media-body">
+                  <h6 class="my-0 text-white d-block">Kanaga Raja</h6>
+                  <small>5 years</small>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card text-white card-has-bg click-col mr-3" style="width: 18rem;"
+          style="background-image:url('https://source.unsplash.com/600x900/?computer,design');">
+          <img class="card-img d-none" src="https://source.unsplash.com/600x900/?computer,design"
+            alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
+          <div class="card-img-overlay d-flex flex-column">
+            <div class="card-body">
+              <h4 class="card-title mt-3 "><a class="text-white" herf="#">Wedding Photogrphy</a></h4>
+            </div>
+            <div class="card-footer">
+              <div class="media">
+                <img class="mr-3 rounded-circle"
+                  src="https://cdn0.iconfinder.com/data/icons/user-pictures/100/male-512.png"
+                  alt="Generic placeholder image" style="max-width:50px">
+                <div class="media-body">
+                  <h6 class="my-0 text-white d-block">Vijay </h6>
+                  <small>3 years</small>
                 </div>
               </div>
             </div>
@@ -173,10 +213,8 @@
             alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
           <div class="card-img-overlay d-flex flex-column">
             <div class="card-body">
-              <small class="card-meta mb-2">Thought Leadership</small>
-              <h4 class="card-title mt-0 "><a class="text-white" herf="#">Goverment Lorem Ipsum Sit Amet Consectetur
-                  dipisi?</a></h4>
-              <small><i class="far fa-clock"></i> October 15, 2020</small>
+              <h4 class="card-title mt-3 "><a class="text-white" herf="#">Authentic Tatse</a></h4>
+         
             </div>
             <div class="card-footer">
               <div class="media">
@@ -184,8 +222,8 @@
                   src="https://cdn0.iconfinder.com/data/icons/user-pictures/100/male-512.png"
                   alt="Generic placeholder image" style="max-width:50px">
                 <div class="media-body">
-                  <h6 class="my-0 text-white d-block">Kalai Mahal</h6>
-                  <small>Junction</small>
+                  <h6 class="my-0 text-white d-block">Kalai </h6>
+                  <small>6 years</small>
                 </div>
               </div>
             </div>
@@ -199,10 +237,7 @@
             alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
           <div class="card-img-overlay d-flex flex-column">
             <div class="card-body">
-              <small class="card-meta mb-2">Thought Leadership</small>
-              <h4 class="card-title mt-0 "><a class="text-white" herf="#">Goverment Lorem Ipsum Sit Amet Consectetur
-                  dipisi?</a></h4>
-              <small><i class="far fa-clock"></i> October 15, 2020</small>
+              <h4 class="card-title mt-3 "><a class="text-white" herf="#">Pure South Indian Dish</a></h4>
             </div>
             <div class="card-footer">
               <div class="media">
@@ -210,8 +245,8 @@
                   src="https://cdn0.iconfinder.com/data/icons/user-pictures/100/male-512.png"
                   alt="Generic placeholder image" style="max-width:50px">
                 <div class="media-body">
-                  <h6 class="my-0 text-white d-block">Daring Hall</h6>
-                  <small>Shavepet</small>
+                  <h6 class="my-0 text-white d-block">Dhakshan</h6>
+                  <small>2 years</small>
                 </div>
               </div>
             </div>
@@ -225,10 +260,7 @@
             alt="Goverment Lorem Ipsum Sit Amet Consectetur dipisi?">
           <div class="card-img-overlay d-flex flex-column">
             <div class="card-body">
-              <small class="card-meta mb-2">Thought Leadership</small>
-              <h4 class="card-title mt-0 "><a class="text-white" herf="#">Goverment Lorem Ipsum Sit Amet Consectetur
-                  dipisi?</a></h4>
-              <small><i class="far fa-clock"></i> October 15, 2020</small>
+              <h4 class="card-title mt-3 "><a class="text-white" herf="#">Italina Stlye </a></h4>
             </div>
             <div class="card-footer">
               <div class="media">
@@ -236,8 +268,8 @@
                   src="https://cdn0.iconfinder.com/data/icons/user-pictures/100/male-512.png"
                   alt="Generic placeholder image" style="max-width:50px">
                 <div class="media-body">
-                  <h6 class="my-0 text-white d-block">Vijay Mahal</h6>
-                  <small>Ammapet</small>
+                  <h6 class="my-0 text-white d-block">Vikrant</h6>
+                  <small>5 years</small>
                 </div>
               </div>
             </div>
@@ -247,5 +279,89 @@
 
     </div>
 
+  </div>
+</section>
+<section>
+  <div class="footer">
+    <footer class="bg-dark text-center text-lg-start">
+      <!-- Grid container -->
+      <div class="container p-4" style="color: white;">
+        <!--Grid row-->
+        <div class="row">
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+   
+    
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Halls</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Photogrphy</a>
+              </li>
+              
+            </ul>
+          </div>
+          <!--Grid column-->
+    
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          
+    
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!" class="text-white">Catering</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Vlogs</a>
+              </li>
+            
+            </ul>
+          </div>
+          <!--Grid column-->
+    
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          
+    
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="#!" class="text-white">Blogs</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Careerr</a>
+              </li>
+              
+            </ul>
+          </div>
+          <!--Grid column-->
+    
+          <!--Grid column-->
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+  
+    
+            <ul class="list-unstyled">
+              <li>
+                <a href="#!" class="text-white">Contact US</a>
+              </li>
+              <li>
+                <a href="#!" class="text-white">Address</a>
+              </li>
+             
+            </ul>
+          </div>
+          <!--Grid column-->
+        </div>
+        <!--Grid row-->
+      </div>
+      <!-- Grid container -->
+    
+      <!-- Copyright -->
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2022 Copyright:
+        <a class="text-white" href="https://mdbootstrap.com/">Wedding Planners.com</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
   </div>
 </section>
